--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.application.name=demo
+spring.application.name=mandal
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/DB
 spring.datasource.username=root
 spring.datasource.password=1234
-
+#Enable Virtual Thread
+spring.threads.virtual.enabled=true
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -16,10 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Example generated with: openssl rand -base64 32
 jwt.secret=ZmFrZV9iYXNlNjRfc2VjcmV0X3N0cmluZ19mb3JfdGVzdA==
 
-
-
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-
-gemini.api.key=AIzaSyDOhUgisoBKdhuzsxytHOnXNkSeSYrxngY
+gemini.api.key=
